--- a/src/main/resources/templates/form/create.html
+++ b/src/main/resources/templates/form/create.html
@@ -100,7 +100,7 @@
         </div>
         <!-- Submit -->
         <div class="mt-8 flex justify-end space-x-4">
-          <button type="submit" class="btn-primary">Generate Form</button>
+          <button type="submit" class="btn-primary dashboard-start-process-btn">Generate Form</button>
         </div>
 
         <!-- Form Interface (rich code editor) -->
