user Management(2) - BE

--- a/src/main/resources/templates/userManagement/create.html
+++ b/src/main/resources/templates/userManagement/create.html
@@ -46,8 +46,8 @@
         <div>
           <label class="block text-sm font-medium text-gray-400 mb-2" for="status">Status</label>
           <select class="w-full bg-gray-700 text-white border border-gray-600 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500" id="status" name="status">
-            <option>Active</option>
-            <option>Inactive</option>
+            <option value="true">Enable</option>
+            <option value="false">Disable</option>
           </select>
         </div>
         <div class="md:col-span-2">
