--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -58,6 +58,11 @@
                 <span class="material-icons mr-3">bar_chart</span>
                 <span>Reports</span>
             </a>
+            <a class="flex items-center px-4 py-3 text-slate-300 hover:bg-slate-700 rounded-lg" th:href="@{/chat}"
+               th:classappend="${currentPath == '/chat'} ? ' bg-blue-600'">
+                <span class="material-icons mr-3">chat</span>
+                <span>Chat</span>
+            </a>
         </nav>
     </div>
 </aside>
